<resources>
    <string name="app_name">Laser Booking</string>
    <string-array name="countries_array">
        <item>Nationality/الجنسية</item>
        <item>Afghan</item>
        <item>Albanian</item>
        <item>Algerian</item>
        <item>American</item>
        <item>Andorran</item>
        <item>Angolan</item>
        <item>Antiguans</item>
        <item>Argentinean</item>
        <item>Armenian</item>
        <item>Australian</item>
        <item>Austrian</item>
        <item>Azerbaijani</item>
        <item>Bahamian</item>
        <item>Bahraini</item>
        <item>Bangladeshi</item>
        <item>Barbadian</item>
        <item>Barbudans</item>
        <item>Batswana</item>
        <item>Belarusian</item>
        <item>Belgian</item>
        <item>Belizean</item>
        <item>Beninese</item>
        <item>Bhutanese</item>
        <item>Bolivian</item>
        <item>Bosnian</item>
        <item>Brazilian</item>
        <item>British</item>
        <item>Bruneian</item>
        <item>Bulgarian</item>
        <item>Burkinabe</item>
        <item>Burmese</item>
        <item>Burundian</item>
        <item>Cambodian</item>
        <item>Cameroonian</item>
        <item>Canadian</item>
        <item>Cape Verdean</item>
        <item>Central African</item>
        <item>Chadian</item>
        <item>Chilean</item>
        <item>Chinese</item>
        <item>Colombian</item>
        <item>Comoran</item>
        <item>Congolese</item>
        <item>Congolese</item>
        <item>Costa Rican</item>
        <item>Croatian</item>
        <item>Cuban</item>
        <item>Cypriot</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>Djibouti</item>
        <item>Dominican </item>
        <item>Dominican </item>
        <item>Dutch</item>
        <item>Dutchman</item>
        <item>Dutchwoman</item>
        <item>East Timorese</item>
        <item>Ecuadorean</item>
        <item>Egyptian</item>
        <item>Emirian</item>
        <item>Equatorial Guinean</item>
        <item>Eritrean</item>
        <item>Estonian</item>
        <item>Ethiopian</item>
        <item>Fijian</item>
        <item>Filipino</item>
        <item>Finnish</item>
        <item>French</item>
        <item>Gabonese</item>
        <item>Gambian</item>
        <item>Georgian</item>
        <item>German</item>
        <item>Ghanaian</item>
        <item>Greek</item>
        <item>Grenadian</item>
        <item>Guatemalan</item>
        <item>Guinea-Bissauan</item>
        <item>Guinean</item>
        <item>Guyanese</item>
        <item>Haitian</item>
        <item>Herzegovinian</item>
        <item>Honduran</item>
        <item>Hungarian</item>
        <item>I-Kiribati</item>
        <item>Icelander</item>
        <item>Indian</item>
        <item>Indonesian</item>
        <item>Iranian</item>
        <item>Iraqi</item>
        <item>Irish</item>
        <item>Irish</item>
        <item>Israeli</item>
        <item>Italian</item>
        <item>Ivorian</item>
        <item>Jamaican</item>
        <item>Japanese</item>
        <item>Jordanian</item>
        <item>Kazakhstani</item>
        <item>Kenyan</item>
        <item>Kittian and Nevisian</item>
        <item>Kuwaiti</item>
        <item>Kyrgyz</item>
        <item>Laotian</item>
        <item>Latvian</item>
        <item>Lebanese</item>
        <item>Liberian</item>
        <item>Libyan</item>
        <item>Liechtensteiner</item>
        <item>Lithuanian</item>
        <item>Luxembourger</item>
        <item>Macedonian</item>
        <item>Malagasy</item>
        <item>Malawian</item>
        <item>Malaysian</item>
        <item>Maldivan</item>
        <item>Malian</item>
        <item>Maltese</item>
        <item>Marshallese</item>
        <item>Mauritanian</item>
        <item>Mauritian</item>
        <item>Mexican</item>
        <item>Micronesian</item>
        <item>Moldovan</item>
        <item>Monacan</item>
        <item>Mongolian</item>
        <item>Moroccan</item>
        <item>Mosotho</item>
        <item>Motswana</item>
        <item>Mozambican</item>
        <item>Namibian</item>
        <item>Nauruan</item>
        <item>Nepalese</item>
        <item>Netherlander</item>
        <item>New Zealander</item>
        <item>Ni-Vanuatu</item>
        <item>Nicaraguan</item>
        <item>Nigerian</item>
        <item>Nigerien</item>
        <item>North Korean</item>
        <item>Northern Irish</item>
        <item>Norwegian</item>
        <item>Omani</item>
        <item>Pakistani</item>
        <item>Palauan</item>
        <item>Panamanian</item>
        <item>Papua New Guinean</item>
        <item>Paraguayan</item>
        <item>Peruvian</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Qatari</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Rwandan</item>
        <item>Saint Lucian</item>
        <item>Salvadoran</item>
        <item>Samoan</item>
        <item>San Marinese</item>
        <item>Sao Tomean</item>
        <item>Saudi</item>
        <item>Scottish</item>
        <item>Senegalese</item>
        <item>Serbian</item>
        <item>Seychellois</item>
        <item>Sierra Leonean</item>
        <item>Singaporean</item>
        <item>Slovakian</item>
        <item>Slovenian</item>
        <item>Solomon Islander</item>
        <item>Somali</item>
        <item>South African</item>
        <item>South Korean</item>
        <item>Spanish</item>
        <item>Sri Lankan</item>
        <item>Sudanese</item>
        <item>Surinamer</item>
        <item>Swazi</item>
        <item>Swedish</item>
        <item>Swiss</item>
        <item>Syrian</item>
        <item>Taiwanese</item>
        <item>Tajik</item>
        <item>Tanzanian</item>
        <item>Thai</item>
        <item>Togolese</item>
        <item>Tongan</item>
        <item>Trinidadian or Tobagonian</item>
        <item>Tunisian</item>
        <item>Turkish</item>
        <item>Tuvaluan</item>
        <item>Ugandan</item>
        <item>Ukrainian</item>
        <item>Uruguayan</item>
        <item>Uzbekistani</item>
        <item>Venezuelan</item>
        <item>Vietnamese</item>
        <item>Welsh</item>
        <item>Welsh</item>
        <item>Yemenite</item>
        <item>Zambian</item>
    </string-array>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="appName">Laser Clinics</string>
    <string name="sar">SAR</string>
    <string name="ok">Ok</string>
    <string name="km">Km</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="register">Register</string>
    <string name="language">عربي</string>
    <string name="createAccount">Create New Account</string>
    <string name="mobile">Mobile Number</string>
    <string name="repeat">Repeat Password</string>
    <string name="fullname">Fullname</string>
    <string name="loginfailed">Login failed</string>
    <string name="checkcreds">Invalid mobile number or password</string>
    <string name="banned">This account is banned or deleted</string>
    <string name="sel_region">Select a region</string>
    <string name="sel_city">Select a city</string>
    <string name="sel_district">Select a district</string>
    <string name="verify">Verify</string>
    <string name="verify_code">Verification Code</string>
    <string name="enter_verify_code">Please enter verification code</string>
    <string name="mobile_unavailable_title">Mobile Unavailable</string>
    <string name="mobile_unavailable_desc">This mobile is already registered</string>
    <string name="verified_title">Verification Success!</string>
    <string name="verified_desc">Now, please login with mobile and password</string>
    <string name="invalid_verify_title">Invalid code</string>
    <string name="invalid_verify_desc">Please enter a correct verification code</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="sendSMS">Send SMS</string>
    <string name="sendSMSAgain">Send a new verification code</string>
    <string name="invalid_mobile">Mobile not found!</string>
    <string name="invalid_mobile_desc">Couldn\'t find this mobile number</string>
    <string name="new_sms_sent">Sent successfully</string>
    <string name="new_sms_desc">Please enter the new code</string>
    <string name="sms_sent">SMS Sent!</string>
    <string name="sms_sent_desc">Reset Link sent to mobile number follow link to change the password then login again</string>
    <string name="max_reached">Max tries reached!</string>
    <string name="max_reached_desc">You\'ve reached maximum number of SMS usage for today please tray after 24 hours</string>
    <string name="greeting">Hello, {{name}}</string>
    <string name="home">Home</string>
    <string name="profile">My Profile</string>
    <string name="offers">Offers</string>
    <string name="laser_offers">Laser Offers</string>
    <string name="special_offers">Special Offers</string>
    <string name="nearby">Nearby</string>
    <string name="near">Near</string>
    <string name="laser">Laser</string>
    <string name="botox">Botox</string>
    <string name="filler">Filler</string>
    <string name="teeth">Teeth</string>
    <string name="myAppointments">My appointments</string>
    <string name="unratedAppointments">Rating</string>
    <string name="theAppointment">Appointment</string>
    <string name="rate">Rate</string>
    <string name="chooseRating">How was your experience?</string>
    <string name="addComment">Add more details</string>
    <string name="comment">Comment</string>
    <string name="send">Send</string>
    <string name="rateSent">Rating Sent!</string>
    <string name="thankyou">Thank you</string>
    <string name="doneTitle">Appointment Created!</string>
    <string name="doneSubTitle">Your appointment has been created successfully!</string>
    <string name="doneComment">Please wait until your appointment is approved</string>
    <string name="goHome">Go to home page</string>
    <string name="goToSubscriptions">Go to My Subscriptions </string>
    <string name="search">Search Clinics or Cities...</string>
    <string name="nodata">No data found</string>
    <string name="offer">Offer</string>
    <string name="services">Services</string>
    <string name="workingtime">Working times</string>
    <string name="ratings">Ratings</string>
    <string name="showall">Show all</string>
    <string name="location">Location</string>
    <string name="booknow">Book Now</string>
    <string name="naviagte">Navigate</string>
    <string name="clinicRatings">Clinic Ratings</string>
    <string name="reason">Reason</string>
    <string name="writereason">Please write the reason</string>
    <string name="gotolocation">Go to Location</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="clinicName">Clinic Name</string>
    <string name="clinicInfo">Clinic Info</string>
    <string name="appointmentInfo">Appointment Info</string>
    <string name="resnumber">ID</string>
    <string name="status">Status</string>
    <string name="cancelres">Cancel Reservation</string>
    <string name="alert">Alert</string>
    <string name="confirmCancel">Are you sure you want cancel?</string>
    <string name="paymentInfo">Payment Info</string>
    <string name="paymentType">Pay Type</string>
    <string name="paid">Paid?</string>
    <string name="selectService">Select a Service</string>
    <string name="seltime">Select time</string>
    <string name="current">Current</string>
    <string name="previous">Previous</string>
    <string name="name">Name</string>
    <string name="ac_cancel">Cancel</string>
    <string name="ac_select">Search results </string>
</resources>